# soroban-examples

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Makefile  README.md  build-local-devcontainer.sh  build_devcontainer.sh  devcontainer.md  rust-toolchain.toml  soroban_liquidity_pool_contract.wasm  soroban_single_offer_contract.wasm  soroban_token_contract.wasm  soroban_token_spec.wasm
account/: Cargo.toml  Makefile  README.md
account/src/: lib.rs  test.rs
alloc/: Cargo.toml  Makefile  README.md
alloc/src/: lib.rs  test.rs
atomic_multiswap/: Cargo.toml  Makefile  README.md
atomic_multiswap/src/: lib.rs  test.rs
auth/: Cargo.toml  Makefile  README.md
auth/src/: lib.rs  test.rs
auth_advanced/: Cargo.toml
auth_advanced/src/: lib.rs  test.rs
auth_simple/: Cargo.toml
auth_simple/src/: lib.rs  test.rs
authorization/: Cargo.toml
authorization/src/: cryptography.rs  lib.rs  public_types.rs  test.rs
bls_signature/: Cargo.toml  README  README.md
bls_signature/src/: lib.rs  test.rs
custom_types/: Cargo.toml  Makefile  READMe.md
custom_types/src/: lib.rs  test.rs
errors/: Cargo.toml  Makefile  README.md
errors/src/: lib.rs  test.rs
eth_abi/: Cargo.toml  README.md
eth_abi/src/: lib.rs  test.rs
eth_abi/test_snapshots/test/: test_exec.1.json
events/: Cargo.toml  Makefile  README.md
events/src/: lib.rs  test.rs
fuzzing/: Cargo.toml  Makefile  README.md
fuzzing/fuzz/: Cargo.toml
fuzzing/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_2.rs
fuzzing/src/: lib.rs  proptest.rs
groth16_verifier/: Cargo.toml  Makefile  README  README.md  rust-toolchain.toml
groth16_verifier/bls12-381/: Cargo.toml  README.md
groth16_verifier/bls12-381/data/auxiliary/: pot12_0001.ptau
groth16_verifier/bls12-381/src/: lib.rs  test.rs
groth16_verifier/bn254/: Cargo.toml  Makefile  README.md
groth16_verifier/bn254/data/: proof.json  verification_key.json
groth16_verifier/bn254/data/auxiliary/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau
groth16_verifier/bn254/src/: lib.rs  test.rs
groth16_verifier/contracts/ark_verifier/: Cargo.toml
groth16_verifier/contracts/ark_verifier/src/: lib.rs  test.rs
groth16_verifier/contracts/bls12_381_verifier/: Cargo.toml  Makefile
groth16_verifier/contracts/bls12_381_verifier/src/: lib.rs
groth16_verifier/contracts/bls12_381_verifier/tests/: arkworks.rs  circom.rs  gnark.rs
groth16_verifier/contracts/bn254_verifier/: Cargo.toml  Makefile
groth16_verifier/contracts/bn254_verifier/src/: lib.rs
groth16_verifier/contracts/circom_verifier/: Cargo.toml
groth16_verifier/contracts/gnark_bn254_verifier/: Cargo.toml
groth16_verifier/contracts/gnark_verifier/: Cargo.toml
groth16_verifier/data/: proof.json  verification_key.json
groth16_verifier/data/arkworks/: README.md  proof.json  verification_key.json
groth16_verifier/data/auxiliary/: multiplier2_0001.zkey  pot12_0000.ptau
groth16_verifier/data/circom/: README.md  public.json
groth16_verifier/data/gnark/: README.md  proof.json  verification_key.json
groth16_verifier/data/gnark_bn254/: README.md  proof.json  verification_key.json
groth16_verifier/data/multiplier2_js/: multiplier2.wasm  multiplier2_0000.zkey  verifier.sol
groth16_verifier/src/: lib.rs  test.rs
hello_world/: Cargo.toml  Makefile  README.md  deno.jsonc
hello_world/src/: lib.rs  test.rs
hello_world/tasks/: deploy.ts
import_ark_bn254/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
import_ark_bn254/opt/: soroban_ark_bn254_contract.wasm
import_ark_bn254/src/: lib.rs  test.rs
increment/: Cargo.toml  Makefile  README.md
increment/src/: lib.rs  test.rs
liquidity_pool/: Cargo.toml  Makefile  README.md
liquidity_pool/src/: external.rs  lib.rs  test.rs  testutils.rs  token.rs  token_contract.rs
liquidity_pool_router/: Cargo.toml
liquidity_pool_router/src/: lib.rs  pool_contract.rs  test.rs  testutils.rs  token_contract.rs
liquidity_pool_router_with_payload/: Cargo.toml
liquidity_pool_router_with_payload/src/: lib.rs  pool_contract.rs  token_contract.rs
logging/: Cargo.toml  Makefile  README.md
logging/src/: lib.rs  test.rs
modular_account/: Cargo.toml
modular_account/src/: lib.rs  test.rs
privacy-pools/: .gitignore  Cargo.toml  Makefile  README.md  demo.sh
privacy-pools/circom2soroban/: Cargo.toml
privacy-pools/circom2soroban/src/: main.rs
privacy-pools/circuits/: Makefile  commitment.circom  dummy.circom  main.circom  merkleProof.circom  poseidon255.circom  poseidon255_constants.circom
privacy-pools/circuits/test/: README.md  test_commitment.circom  test_merkleProof.circom  test_poseidon.circom  test_poseidon_input.json
privacy-pools/cli/circom2soroban/: Cargo.toml
privacy-pools/cli/coinutils/: Cargo.toml  README.md
privacy-pools/coinutils/: Cargo.toml  README.md
privacy-pools/coinutils/src/: error.rs  main.rs
privacy-pools/coinutils/tests/: integration_tests.rs
privacy-pools/contract/: Cargo.toml  Makefile
privacy-pools/contract/src/: lib.rs  test.rs
privacy-pools/contracts/privacy-pools/: Cargo.toml  Makefile
privacy-pools/libs/lean-imt/: Cargo.toml  README.md
privacy-pools/libs/poseidon/: Cargo.toml
privacy-pools/libs/zk/: Cargo.toml
privacy-pools/poseidon/: Makefile
privacy-pools/poseidon/src/: contract.rs  lib.rs
privacy-pools/zk/src/: lib.rs
secp256r1/: Cargo.toml
secp256r1/src/: lib.rs  test.rs
secp256r1/test_snapshots/test/: test.1.json  test_native.1.json  test_wasm.1.json
simple_account/: Cargo.toml  Makefile  README.md
simple_account/src/: lib.rs  test.rs
single_offer/: Cargo.toml  Makefile  README.md
single_offer/src/: cryptography.rs  external.rs  lib.rs  test.rs  testutils.rs  token_contract.rs
single_offer_router/: Cargo.toml
single_offer_router/src/: lib.rs  offer_contract.rs  test.rs  testutils.rs  token_contract.rs
single_offer_xfer_from/: Cargo.toml
single_offer_xfer_from/src/: cryptography.rs  lib.rs  test.rs  testutils.rs  token_contract.rs
timelock/: Cargo.toml  Makefile  README.md
timelock/src/: lib.rs  test.rs
(+309 files in other folders)
