[workspace]
resolver = "2"

members = [   
    "hello_world",
    "increment",
    "auth",
    "custom_types",
    "cross_contract/contract_a",
    "cross_contract/contract_b",
    "deployer/contract",
    "deployer/deployer",
    "liquidity_pool",
    "single_offer",
    "events",
    "token",
    "logging",
    "errors", 
    "timelock",
    "atomic_swap",
    "atomic_multiswap",
    "account",
    "alloc",
    "simple_account",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.7.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "29b505cf95f2fd4fbe639fdb163b606c44920837"

[workspace.dependencies.soroban-auth]
version = "0.7.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "29b505cf95f2fd4fbe639fdb163b606c44920837"

# [patch."https://github.com/stellar/rs-soroban-sdk"]
# soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk" }
# soroban-auth = { path = "../rs-soroban-sdk/soroban-auth" }

# [patch."https://github.com/stellar/rs-soroban-env"]
# soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
# soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
# soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
