[workspace]
resolver = "2"
members = [
  "./*",
]
exclude = [
  ".git",
  ".github",
  ".vscode",
  "cross_contract",
  "deployer",
  "target",
  "test",
  "upgradeable_contract",
  "webauthn",
  "workspace",
]

[workspace.dependencies]
soroban-sdk = "22.0.0-rc.3.2"
soroban-token-sdk = "22.0.0-rc.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
