[package]
name = "soroban-auth-advanced-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "0.2.1"
soroban-auth = "0.2.1"
ed25519-dalek = { version = "1.0.1", optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }
soroban-auth = { version = "0.2.1", features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
