[package]
name = "soroban-eth-abi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
alloy-sol-types = { version = "0.6.3" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
