[package]
name = "soroban-eth-abi"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.8", features = ["alloc"] }
alloy-sol-types = { version="0.6.3", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
