[package]
name = "soroban-fuzzing-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }
arbitrary = { version = "1.1.3", features = ["derive"] }
proptest  = "1.2.0"
proptest-arbitrary-interop = "0.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
