[package]
name = "soroban-fuzzing-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
arbitrary = { version = "1.1.3", features = ["derive"] }
proptest  = "1.2.0"
proptest-arbitrary-interop = "0.1.0"
