[workspace]
members = ["bls12-381", "bn254"]
resolver = "2"

[workspace.package]
rust-version = "1.89.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
