[workspace]
members = ["bls12-381", "bn254"]
resolver = "2"

[workspace.package]
rust-version = "1.89.0"

[workspace.dependencies]
soroban-sdk = { version = "25.0.2" }

[workspace.dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
