[workspace]
resolver = "2"
members = [
  "contracts/*",
]
exclude = [
  "data/arkworks/auxiliary",
  "data/circom/**",
  "data/gnark/**",
]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
ark-bls12-381 = { version = "0.4.0"}
ark-serialize = { version = "0.4.2"}
ark-ff = { version = "0.4.2"}
ark-ec = { version = "0.4.2"}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
