[package]
name = "stellar-hello-world-contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["export"]
export = []
testutils = ["stellar-contract-sdk/testutils"]

[dependencies]
stellar-contract-sdk = { git = "https://github.com/stellar/rs-stellar-contract-sdk", rev = "c20718fc" }

[dev_dependencies]
stellar-hello-world-contract = { path = ".", default-features = false, features = ["testutils"] }
