[package]
name = "soroban-ark-bn254-contract"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.8", features = ["alloc"]}
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["alloc", "testutils"] }
ark-std = "0.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
