[package]
name = "soroban-liquidity-pool-contract"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "22.0.7" }
num-integer = { version = "0.1.45", default-features = false, features = ["i128"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
