[package]
name = "soroban-liquidity-pool-router-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils" ,"dep:ed25519-dalek", "dep:sha2", "dep:stellar-xdr"]

[dependencies]
soroban-sdk = "0.2.1"
soroban-auth = "0.2.1"
ed25519-dalek = { version = "1.0.1", optional = true }
stellar-xdr = { version = "0.0.6", features = ["next", "std"], optional = true }
sha2 = { version = "0.10.2", optional = true }


[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }
stellar-xdr = { version = "0.0.6", features = ["next", "std"] }
ed25519-dalek = { version = "1.0.1" }
sha2 = { version = "0.10.2" }
rand = { version = "0.7.3" }
