[package]
name = "soroban-simple-account-contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "0.7.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "29b505cf95f2fd4fbe639fdb163b606c44920837"}
soroban-auth = { version = "0.7.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "29b505cf95f2fd4fbe639fdb163b606c44920837"}

[dev_dependencies]
soroban-sdk = { version = "0.7.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "29b505cf95f2fd4fbe639fdb163b606c44920837", features = ["testutils"] }
soroban-auth = { version = "0.7.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "29b505cf95f2fd4fbe639fdb163b606c44920837", features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
