[package]
name = "soroban-single-offer-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils", "dep:ed25519-dalek"]

[dependencies]
soroban-sdk = "0.2.0"
soroban-auth = "0.2.0"
ed25519-dalek = { version = "1.0.1", optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.2.0", features = ["testutils"] }
soroban-auth = { version = "0.2.0", features = ["testutils"] }
stellar-xdr = { version = "0.0.6" }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
