[package]
name = "soroban-single-offer-router-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils","soroban-single-offer-contract/testutils","dep:ed25519-dalek", "dep:sha2", "dep:stellar-xdr"]

[dependencies]
soroban-sdk = "0.0.6"
soroban-auth = "0.0.6"
ed25519-dalek = { version = "1.0.1", optional = true }
stellar-xdr = { version = "0.0.6", features = ["next", "std"], optional = true }
sha2 = { version = "0.10.2", optional = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-single-offer-contract = { path = "../single_offer", version = "0.0.0", default-features = false, optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.0.6", features = ["testutils"] }
soroban-auth = { version = "0.0.6", features = ["testutils"] }
soroban-single-offer-contract = { path = "../single_offer", version = "0.0.0", default-features = false, features = ["testutils"] }
stellar-xdr = { version = "0.0.6", features = ["next", "std"] }
ed25519-dalek = { version = "1.0.1" }
sha2 = { version = "0.10.2" }
rand = { version = "0.7.3" }
