[package]
name = "soroban-single-offer-contract-xfer-from"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils", "soroban-token-contract/testutils", "dep:ed25519-dalek"]

[dependencies]
soroban-sdk = "0.0.4"
soroban-auth = "0.0.4"
ed25519-dalek = { version = "1.0.1", optional = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
soroban-token-contract = { path = "../token", version = "0.0.4", default-features = false, optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.0.4", features = ["testutils"] }
soroban-token-contract = { path = "../token", version = "0.0.4", default-features = false, features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
