[package]
name = "soroban-single-offer-contract-xfer-from"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils", "dep:ed25519-dalek"]

[dependencies]
soroban-sdk = "0.2.1"
soroban-auth = "0.2.1"
ed25519-dalek = { version = "1.0.1", optional = true }

[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
