[package]
name = "soroban-timelock-contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-auth/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-auth = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"]  }
